# distcopy

./: MANIFEST.in  README.md  pyproject.toml  requirements.txt  run.py
distcopy/: __main__.py  client.py  server.py
